<?xml version="1.0" encoding="utf-8"?>
<!-- layout_bottom_sheet.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorSurface">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_details_lbl"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/floor_input_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/floorTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/parking_lot_input_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spotTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmUbiBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_parking_btn"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/deleteParkingBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delete_parking_location_button"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone" />

</LinearLayout>